tests/vdq-rta/should_fail/T22326_fail_patsyn.hs
{-# LANGUAGE ExplicitNamespaces #-}
{-# LANGUAGE PatternSynonyms #-}

module T22326_fail_patsyn where

pattern MyPat = type Int